--- a/package.json
+++ b/package.json
@@ -33,12 +33,12 @@
         "@navikt/fnrvalidator": "^1.1.3",
         "@navikt/omsorgspengerutbetaling-schema": "^0.1.3",
         "@navikt/sif-common-amplitude": "^1.2.5",
-        "@navikt/sif-common-core": "^8.5.0",
-        "@navikt/sif-common-formik": "^15.5.2",
-        "@navikt/sif-common-forms": "^13.0.5",
+        "@navikt/sif-common-core": "^9.1.0",
+        "@navikt/sif-common-formik": "^17.2.6",
+        "@navikt/sif-common-forms": "^14.0.0-beta.3",
         "@navikt/sif-common-question-config": "^0.0.7",
-        "@navikt/sif-common-sentry": "0.0.14",
-        "@sentry/browser": "^6.2.5",
+        "@navikt/sif-common-sentry": "0.1.1",
+        "@sentry/browser": "^6.3.0",
         "@testing-library/react": "^11.2.6",
         "amplitude-js": "^8.1.0",
         "axios": "^0.21.1",
@@ -50,7 +50,7 @@
         "express": "^4.17.1",
         "formik": "^2.2.6",
         "fs-extra": "^9.1.0",
-        "helmet": "^4.4.1",
+        "helmet": "^4.5.0",
         "history": "^5.0.0",
         "http-status-codes": "^2.1.4",
         "i18n-iso-countries": "^6.7.0",
@@ -67,20 +67,20 @@
         "react-collapse": "^5.1.0",
         "react-day-picker": "^7.4.10",
         "react-dom": "^17.0.2",
-        "react-intl": "^5.15.8",
+        "react-intl": "^5.16.0",
         "react-modal": "^3.13.1",
         "react-router-dom": "^5.2.0",
         "react-simple-timefield": "^3.2.3",
-        "snyk": "^1.538.0",
+        "snyk": "^1.563.0",
         "use-media": "^1.4.0"
     },
     "devDependencies": {
-        "@babel/core": "^7.13.15",
+        "@babel/core": "^7.13.16",
         "@babel/plugin-proposal-object-rest-spread": "^7.13.8",
         "@babel/plugin-transform-modules-commonjs": "^7.13.8",
         "@babel/preset-env": "^7.13.15",
         "@babel/preset-react": "^7.13.13",
-        "@types/classnames": "^2.2.11",
+        "@types/classnames": "^2.3.1",
         "@types/enzyme": "^3.10.8",
         "@types/flat": "5.0.1",
         "@types/intl": "^1.2.0",
@@ -101,13 +101,13 @@
         "babel-jest": "^26.6.3",
         "babel-polyfill": "^6.26.0",
         "case-sensitive-paths-webpack-plugin": "^2.4.0",
-        "css-loader": "^5.2.1",
+        "css-loader": "^5.2.4",
         "enzyme": "^3.11.0",
         "eslint": "^7.24.0",
         "eslint-config-prettier": "^8.2.0",
         "eslint-loader": "^4.0.2",
         "eslint-plugin-jsx-a11y": "^6.4.1",
-        "eslint-plugin-prettier": "^3.3.1",
+        "eslint-plugin-prettier": "^3.4.0",
         "eslint-plugin-react": "^7.23.2",
         "eslint-plugin-react-hooks": "^4.2.0",
         "html-webpack-harddisk-plugin": "^2.0.0",
@@ -116,8 +116,8 @@
         "jest": "^26.6.3",
         "jest-css-modules": "^2.1.0",
         "less": "^4.1.1",
-        "less-loader": "^8.1.0",
-        "mini-css-extract-plugin": "^1.4.1",
+        "less-loader": "^8.1.1",
+        "mini-css-extract-plugin": "^1.5.0",
         "npm-run-all": "^4.1.5",
         "postcss-input-range": "^4.0.0",
         "postcss-loader": "^5.2.0",
@@ -127,9 +127,9 @@
         "source-map-loader": "^2.0.1",
         "style-loader": "^2.0.0",
         "svg-sprite-loader": "^5.2.1",
-        "ts-jest": "^26.5.4",
+        "ts-jest": "^26.5.5",
         "typescript": "^4.2.4",
-        "webpack": "^5.32.0",
+        "webpack": "^5.35.0",
         "webpack-dev-server": "^3.11.2"
     },
     "resolutions": {
