--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "omsorgspengerutbetaling-soknad",
-    "version": "0.0.1",
+    "version": "1.0.0",
     "description": "Søknad om utbetaling av omsorgsdager for selvstendige og frilansere",
     "repository": "https://github.com/navikt/omsorgspengerutbetaling-soknad",
     "license": "MIT",
@@ -34,11 +34,11 @@
         "@navikt/omsorgspengerutbetaling-schema": "^0.1.3",
         "@navikt/sif-common-amplitude": "^1.2.5",
         "@navikt/sif-common-core": "^9.1.0",
-        "@navikt/sif-common-formik": "^17.4.1",
-        "@navikt/sif-common-forms": "^14.0.0-beta.6",
+        "@navikt/sif-common-formik": "^18.0.0-beta.3",
+        "@navikt/sif-common-forms": "^14.0.0-beta.11",
         "@navikt/sif-common-question-config": "^0.0.7",
         "@navikt/sif-common-sentry": "0.1.1",
-        "@sentry/browser": "^6.3.0",
+        "@sentry/browser": "^6.3.1",
         "@testing-library/react": "^11.2.6",
         "amplitude-js": "^8.1.0",
         "axios": "^0.21.1",
@@ -103,8 +103,8 @@
         "case-sensitive-paths-webpack-plugin": "^2.4.0",
         "css-loader": "^5.2.4",
         "enzyme": "^3.11.0",
-        "eslint": "^7.24.0",
-        "eslint-config-prettier": "^8.2.0",
+        "eslint": "^7.25.0",
+        "eslint-config-prettier": "^8.3.0",
         "eslint-loader": "^4.0.2",
         "eslint-plugin-jsx-a11y": "^6.4.1",
         "eslint-plugin-prettier": "^3.4.0",
@@ -129,7 +129,7 @@
         "svg-sprite-loader": "^5.2.1",
         "ts-jest": "^26.5.5",
         "typescript": "^4.2.4",
-        "webpack": "^5.35.0",
+        "webpack": "^5.35.1",
         "webpack-dev-server": "^3.11.2"
     },
     "resolutions": {
