--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,12 +2,13 @@
     "compilerOptions": {
         "outDir": "build/dist",
         "module": "esnext",
-        "target": "es5",
-        "lib": ["es6", "dom", "es2017"],
+        "target": "es2015",
+        "lib": ["dom", "dom.iterable", "es2015", "es2016", "es2017"],
         "sourceMap": true,
         "allowJs": true,
         "allowSyntheticDefaultImports": true,
         "jsx": "react",
+        "esModuleInterop": true,
         "moduleResolution": "node",
         "forceConsistentCasingInFileNames": true,
         "noImplicitReturns": true,
@@ -17,12 +18,7 @@
         "skipLibCheck": true,
         "suppressImplicitAnyIndexErrors": true,
         "noUnusedLocals": true,
-        "baseUrl": "./src",
-        "paths": {
-            "common*": ["../node_modules/@navikt/sif-common-core/lib*"]
-        },
-
-        "typeRoots": ["./node_modules/@types", "./src/@types"]
+        "baseUrl": "./src"
     },
     "awesomeTypescriptLoaderOptions": {
         "useCache": false
