--- a/package.json
+++ b/package.json
@@ -26,18 +26,18 @@
         "prettier:run": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\""
     },
     "dependencies": {
-        "@formatjs/intl-pluralrules": "^4.0.22",
+        "@formatjs/intl-pluralrules": "^4.0.27",
         "@navikt/fnrvalidator": "^1.1.4",
         "@navikt/omsorgspengerutbetaling-schema": "^0.1.3",
         "@navikt/sif-common-amplitude": "^2.0.0",
-        "@navikt/sif-common-core": "^9.4.1",
-        "@navikt/sif-common-formik": "^19.2.2",
-        "@navikt/sif-common-forms": "^14.2.0",
+        "@navikt/sif-common-core": "^9.4.2",
+        "@navikt/sif-common-formik": "^19.6.0",
+        "@navikt/sif-common-forms": "^14.2.1",
         "@navikt/sif-common-question-config": "^0.0.7",
         "@navikt/sif-common-sentry": "0.2.0",
-        "@sentry/browser": "^6.4.1",
+        "@sentry/browser": "^6.7.2",
         "@testing-library/react": "^11.2.7",
-        "amplitude-js": "^8.3.0",
+        "amplitude-js": "^8.3.1",
         "axios": "^0.21.1",
         "busboy": "^0.3.1",
         "classnames": "^2.3.1",
@@ -45,12 +45,12 @@
         "constate": "^3.2.0",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
-        "formik": "^2.2.8",
+        "formik": "^2.2.9",
         "fs-extra": "^10.0.0",
         "helmet": "^4.6.0",
         "history": "^5.0.0",
         "http-status-codes": "^2.1.4",
-        "i18n-iso-countries": "^6.7.0",
+        "i18n-iso-countries": "^6.8.0",
         "iso8601-duration": "^1.3.0",
         "js-cookie": "^2.2.1",
         "jsdom": "^16.6.0",
@@ -64,69 +64,69 @@
         "react-collapse": "^5.1.0",
         "react-day-picker": "^7.4.10",
         "react-dom": "^17.0.2",
-        "react-intl": "^5.18.1",
-        "react-modal": "^3.13.1",
+        "react-intl": "^5.20.3",
+        "react-modal": "^3.14.3",
         "react-router-dom": "^5.2.0",
-        "snyk": "^1.618.0"
+        "snyk": "^1.641.0"
     },
     "devDependencies": {
-        "@babel/core": "^7.14.3",
-        "@babel/plugin-proposal-object-rest-spread": "^7.14.4",
-        "@babel/plugin-transform-modules-commonjs": "^7.14.0",
-        "@babel/preset-env": "^7.14.4",
-        "@babel/preset-react": "^7.13.13",
+        "@babel/core": "^7.14.6",
+        "@babel/plugin-proposal-object-rest-spread": "^7.14.7",
+        "@babel/plugin-transform-modules-commonjs": "^7.14.5",
+        "@babel/preset-env": "^7.14.7",
+        "@babel/preset-react": "^7.14.5",
         "@types/classnames": "^2.3.1",
         "@types/enzyme": "^3.10.8",
         "@types/flat": "5.0.1",
         "@types/intl": "^1.2.0",
         "@types/jest": "^26.0.23",
         "@types/js-cookie": "^2.2.6",
-        "@types/react": "^17.0.8",
+        "@types/react": "^17.0.11",
         "@types/react-aria-menubutton": "^6.2.7",
         "@types/react-collapse": "^5.0.0",
         "@types/react-document-title": "^2.0.4",
-        "@types/react-dom": "^17.0.5",
+        "@types/react-dom": "^17.0.8",
         "@types/react-router-dom": "^5.1.7",
-        "@typescript-eslint/eslint-plugin": "^4.25.0",
-        "@typescript-eslint/parser": "^4.25.0",
-        "@wojtekmaj/enzyme-adapter-react-17": "^0.6.1",
+        "@typescript-eslint/eslint-plugin": "^4.28.0",
+        "@typescript-eslint/parser": "^4.28.0",
+        "@wojtekmaj/enzyme-adapter-react-17": "^0.6.2",
         "autoprefixer": "^10.2.6",
         "babel-core": "^7.0.0-bridge.0",
-        "babel-jest": "^27.0.2",
+        "babel-jest": "^27.0.5",
         "babel-polyfill": "^6.26.0",
         "case-sensitive-paths-webpack-plugin": "^2.4.0",
         "css-loader": "^5.2.6",
         "cypress": "^7.5.0",
         "enzyme": "^3.11.0",
-        "eslint": "^7.27.0",
+        "eslint": "^7.29.0",
         "eslint-config-prettier": "^8.3.0",
-        "eslint-loader": "^4.0.2",
         "eslint-plugin-jsx-a11y": "^6.4.1",
         "eslint-plugin-prettier": "^3.4.0",
         "eslint-plugin-react": "^7.24.0",
         "eslint-plugin-react-hooks": "^4.2.0",
+        "eslint-webpack-plugin": "^2.5.4",
         "html-webpack-harddisk-plugin": "^2.0.0",
-        "html-webpack-plugin": "^5.3.1",
+        "html-webpack-plugin": "^5.3.2",
         "intl": "^1.2.5",
-        "jest": "^27.0.3",
+        "jest": "^27.0.5",
         "jest-css-modules": "^2.1.0",
         "less": "^4.1.1",
-        "less-loader": "^9.0.0",
+        "less-loader": "^10.0.0",
         "mini-css-extract-plugin": "^1.6.0",
         "npm-run-all": "^4.1.5",
         "postcss-input-range": "^4.0.0",
-        "postcss-loader": "^5.3.0",
-        "prettier": "^2.3.0",
-        "pretty-quick": "^3.1.0",
+        "postcss-loader": "^6.1.0",
+        "prettier": "^2.3.1",
+        "pretty-quick": "^3.1.1",
         "regenerator-runtime": "^0.13.7",
         "request": "^2.88.2",
         "source-map-loader": "^3.0.0",
         "style-loader": "^2.0.0",
-        "svg-sprite-loader": "^6.0.7",
-        "ts-jest": "^27.0.2",
-        "ts-loader": "^9.2.2",
-        "typescript": "^4.3.2",
-        "webpack": "^5.38.1",
+        "svg-sprite-loader": "^6.0.8",
+        "ts-jest": "^27.0.3",
+        "ts-loader": "^9.2.3",
+        "typescript": "^4.3.4",
+        "webpack": "^5.40.0",
         "webpack-dev-server": "^3.11.2"
     },
     "resolutions": {
