--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
         "@navikt/fnrvalidator": "^1.1.4",
         "@navikt/omsorgspengerutbetaling-schema": "^0.1.3",
         "@navikt/sif-common-amplitude": "^2.0.0",
-        "@navikt/sif-common-core": "^9.4.2",
+        "@navikt/sif-common-core": "^9.4.3-beta.3",
         "@navikt/sif-common-formik": "^19.6.0",
         "@navikt/sif-common-forms": "^14.2.1",
         "@navikt/sif-common-question-config": "^0.0.7",
