--- a/package.json
+++ b/package.json
@@ -21,16 +21,16 @@
         "prettier:run": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\""
     },
     "dependencies": {
-        "@formatjs/intl-pluralrules": "^4.3.1",
+        "@formatjs/intl-pluralrules": "^4.3.2",
         "@navikt/fnrvalidator": "^1.1.4",
         "@navikt/omsorgspengerutbetaling-schema": "^0.1.3",
         "@navikt/sif-common-amplitude": "^2.2.3",
         "@navikt/sif-common-core": "^9.6.0",
         "@navikt/sif-common-formik": "^20.5.4",
-        "@navikt/sif-common-forms": "^16.3.0-beta.10",
+        "@navikt/sif-common-forms": "^16.5.0",
         "@navikt/sif-common-question-config": "^0.0.7",
         "@navikt/sif-common-sentry": "0.3.0",
-        "@sentry/browser": "^6.17.3",
+        "@sentry/browser": "^6.17.6",
         "@testing-library/react": "^12.1.2",
         "amplitude-js": "^8.16.1",
         "axios": "^0.21.4",
@@ -45,7 +45,7 @@
         "helmet": "^5.0.2",
         "history": "^5.2.0",
         "http-status-codes": "^2.2.0",
-        "i18n-iso-countries": "^7.2.0",
+        "i18n-iso-countries": "^7.3.0",
         "iso8601-duration": "^1.3.0",
         "js-cookie": "^3.0.1",
         "jsdom": "^19.0.0",
@@ -60,10 +60,10 @@
         "react-collapse": "^5.1.1",
         "react-day-picker": "^7.4.10",
         "react-dom": "^17.0.2",
-        "react-intl": "^5.24.4",
+        "react-intl": "^5.24.6",
         "react-modal": "^3.14.4",
         "react-router-dom": "^5.3.0",
-        "snyk": "^1.841.0"
+        "snyk": "^1.850.0"
     },
     "devDependencies": {
         "@babel/core": "^7.16.12",
@@ -77,7 +77,7 @@
         "@types/jest": "^27.4.0",
         "@types/js-cookie": "^3.0.1",
         "@types/lodash": "^4.14.178",
-        "@types/react": "^17.0.38",
+        "@types/react": "^17.0.39",
         "@types/react-aria-menubutton": "^6.2.9",
         "@types/react-collapse": "^5.0.1",
         "@types/react-document-title": "^2.0.5",
@@ -118,7 +118,7 @@
         "ts-loader": "^9.2.6",
         "typescript": "^4.5.5",
         "webpack": "^5.67.0",
-        "webpack-dev-server": "^4.7.3"
+        "webpack-dev-server": "^4.7.4"
     },
     "resolutions": {
         "babel-core": "7.0.0-bridge.0"
