--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "author": "NAV",
     "scripts": {
         "build": "node src/build/scripts/production-build.js",
+        "dev-api": "npm-run-all -p start-api-mock",
         "dev": "npm-run-all -p start-api-mock start-no-decorator",
         "start": "node ./src/build/scripts/start-dev.js",
         "start-no-decorator": "node ./src/build/scripts/start-dev-no-decorator.js",
@@ -22,23 +23,23 @@
     },
     "dependencies": {
         "@formatjs/intl-pluralrules": "^4.3.2",
-        "@navikt/fnrvalidator": "^1.1.4",
+        "@navikt/fnrvalidator": "^1.2.0",
         "@navikt/omsorgspengerutbetaling-schema": "^0.1.3",
         "@navikt/sif-common-amplitude": "^2.2.3",
-        "@navikt/sif-common-core": "^9.6.0",
-        "@navikt/sif-common-formik": "^20.5.4",
-        "@navikt/sif-common-forms": "^16.5.1",
+        "@navikt/sif-common-core": "^10.1.1",
+        "@navikt/sif-common-formik": "^22.0.2",
+        "@navikt/sif-common-forms": "^16.7.0",
         "@navikt/sif-common-question-config": "^0.0.7",
         "@navikt/sif-common-sentry": "0.3.0",
-        "@sentry/browser": "^6.17.6",
-        "@testing-library/react": "^12.1.2",
-        "amplitude-js": "^8.16.1",
+        "@sentry/browser": "^6.17.8",
+        "@testing-library/react": "^12.1.3",
+        "amplitude-js": "^8.17.0",
         "axios": "^0.21.4",
         "busboy": "^1.4.0",
         "classnames": "^2.3.1",
         "compression": "^1.7.4",
         "constate": "^3.3.0",
-        "dotenv": "^14.3.2",
+        "dotenv": "^16.0.0",
         "express": "^4.17.2",
         "formik": "^2.2.9",
         "fs-extra": "^10.0.0",
@@ -63,11 +64,11 @@
         "react-intl": "^5.24.6",
         "react-modal": "^3.14.4",
         "react-router-dom": "^5.3.0",
-        "snyk": "^1.850.0"
+        "snyk": "^1.853.0"
     },
     "devDependencies": {
-        "@babel/core": "^7.16.12",
-        "@babel/plugin-proposal-object-rest-spread": "^7.16.7",
+        "@babel/core": "^7.17.4",
+        "@babel/plugin-proposal-object-rest-spread": "^7.17.3",
         "@babel/plugin-transform-modules-commonjs": "^7.16.8",
         "@babel/preset-env": "^7.16.11",
         "@babel/preset-react": "^7.16.7",
@@ -83,16 +84,16 @@
         "@types/react-document-title": "^2.0.5",
         "@types/react-dom": "^17.0.11",
         "@types/react-router-dom": "^5.3.3",
-        "@typescript-eslint/eslint-plugin": "^5.10.1",
-        "@typescript-eslint/parser": "^5.10.1",
+        "@typescript-eslint/eslint-plugin": "^5.12.0",
+        "@typescript-eslint/parser": "^5.12.0",
         "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
         "babel-core": "^7.0.0-bridge.0",
-        "babel-jest": "^27.4.6",
+        "babel-jest": "^27.5.1",
         "babel-polyfill": "^6.26.0",
         "case-sensitive-paths-webpack-plugin": "^2.4.0",
-        "css-loader": "^6.5.1",
+        "css-loader": "^6.6.0",
         "enzyme": "^3.11.0",
-        "eslint": "^8.8.0",
+        "eslint": "^8.9.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-jsx-a11y": "^6.5.1",
         "eslint-plugin-prettier": "^4.0.0",
@@ -102,7 +103,7 @@
         "html-webpack-harddisk-plugin": "^2.0.0",
         "html-webpack-plugin": "^5.5.0",
         "intl": "^1.2.5",
-        "jest": "^27.4.7",
+        "jest": "^27.5.1",
         "jest-css-modules": "^2.1.0",
         "less": "^4.1.2",
         "less-loader": "^10.2.0",
@@ -117,7 +118,7 @@
         "ts-jest": "^27.1.3",
         "ts-loader": "^9.2.6",
         "typescript": "^4.5.5",
-        "webpack": "^5.67.0",
+        "webpack": "^5.69.0",
         "webpack-dev-server": "^4.7.4"
     },
     "resolutions": {
