--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "express": "^4.18.1",
         "helmet": "^5.1.0",
         "history": "^5.3.0",
+        "jest-environment-jsdom": "^28.1.1",
         "jsdom": "^19.0.0",
         "lodash": "^4.17.21",
         "lodash.throttle": "^4.1.1",
@@ -57,7 +58,7 @@
         "@babel/preset-react": "^7.17.12",
         "@types/enzyme": "^3.10.12",
         "@types/intl": "^1.2.0",
-        "@types/jest": "^27.4.1",
+        "@types/jest": "^28.1.1",
         "@types/lodash": "^4.14.182",
         "@types/react": "^17.0.40",
         "@types/react-dom": "^17.0.13",
@@ -80,15 +81,15 @@
         "html-webpack-harddisk-plugin": "^2.0.0",
         "html-webpack-plugin": "^5.5.0",
         "intl": "^1.2.5",
-        "jest": "^27.5.1",
+        "jest": "^28.1.1",
         "jest-css-modules": "^2.1.0",
         "less": "^4.1.3",
-        "less-loader": "^10.2.0",
+        "less-loader": "^11.0.0",
         "mini-css-extract-plugin": "^2.6.0",
         "npm-run-all": "^4.1.5",
         "prettier": "^2.6.2",
         "source-map-loader": "^3.0.1",
-        "ts-jest": "^27.1.3",
+        "ts-jest": "^28.0.4",
         "ts-loader": "^9.3.0",
         "typescript": "^4.7.3",
         "webpack": "^5.73.0",
