--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -10,7 +10,7 @@ on:
         branches:
 
 env:
-    IMAGE: docker.pkg.github.com/${{ github.repository }}/omsorgspengerutbetaling-soknad:${{ github.sha }}
+    IMAGE: ghcr.io/${{ github.repository }}/omsorgspengerutbetaling-soknad:${{ github.sha }}
 
 jobs:
     test:
@@ -39,10 +39,10 @@ jobs:
         steps:
             - name: Checkout code
               uses: actions/checkout@v1
-            - name: Use Node.js ${{ matrix.node-version }}
+            - name: Use Node.js 16
               uses: actions/setup-node@v1
               with:
-                  node-version: ${{ matrix.node-version }}
+                  node-version: 16
             - name: build code
               run: |
                   npm ci
@@ -54,7 +54,7 @@ jobs:
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
               run: |
-                  echo ${GITHUB_TOKEN} | docker login --username ${GITHUB_REPOSITORY} --password-stdin https://docker.pkg.github.com
+                  echo ${GITHUB_TOKEN} | docker login --username ${GITHUB_REPOSITORY} --password-stdin ghcr.io
                   docker push ${IMAGE}
 
     deploy-dev-gcp:
