--- a/package.json
+++ b/package.json
@@ -32,16 +32,20 @@
         "axios": "^0.25.0",
         "busboy": "^1.6.0",
         "compression": "^1.7.4",
+        "cookie-parser": "^1.4.6",
         "dotenv": "^16.0.1",
         "express": "^4.18.1",
         "helmet": "^5.1.0",
         "history": "^5.3.0",
+        "http-proxy-middleware": "^2.0.6",
         "jest-environment-jsdom": "^28.1.1",
+        "jose": "^4.8.1",
         "jsdom": "^19.0.0",
         "lodash": "^4.17.21",
         "lodash.throttle": "^4.1.1",
         "mustache-express": "^1.3.2",
         "nav-datovelger": "^12.5.0",
+        "openid-client": "^5.1.6",
         "promise": "^8.1.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
