--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     },
     "dependencies": {
         "@navikt/sif-common-amplitude": "^2.4.0",
-        "@navikt/sif-common-core": "12.0.5-beta.0",
+        "@navikt/sif-common-core": "^12.0.4",
         "@navikt/sif-common-formik": "^23.1.1",
         "@navikt/sif-common-forms": "^17.4.1",
         "@navikt/sif-common-sentry": "0.3.2",
@@ -99,8 +99,5 @@
     "resolutions": {
         "babel-core": "7.0.0-bridge.0"
     },
-    "snyk": true,
-    "overrides": {
-        "@navikt/sif-common-core": "12.0.5-beta.0"
-    }
+    "snyk": true
 }
