--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
         "rm:dist": "rimraf dist/",
         "dev": "npm-run-all -p rm:dist dev-api start-no-decorator",
         "start-no-decorator": "node ./src/build/scripts/start-dev-no-decorator.js",
+        "snd": "node ./src/build/scripts/start-dev-no-decorator.js",
         "start": "node ./src/build/scripts/start-dev.js",
-        "test": "jest --maxWorkers=2 --config ./jest/jest.config.js",
+        "test": "react-scripts test --watchAll=false --env=jsdom",
         "snyk-protect": "snyk-protect",
         "prepare": "npm run snyk-protect"
     },
@@ -24,6 +25,7 @@
         "@navikt/sif-common-forms": "^17.5.1",
         "@navikt/sif-common-sentry": "0.3.2",
         "@navikt/sif-common-soknad": "^5.3.1",
+        "@navikt/sif-common-utils": "^3.15.0",
         "@snyk/protect": "^1.991.0",
         "axios": "^0.27.2",
         "busboy": "^1.6.0",
@@ -55,9 +57,9 @@
         "@babel/plugin-transform-modules-commonjs": "^7.18.6",
         "@babel/preset-env": "^7.18.10",
         "@babel/preset-react": "^7.18.6",
+        "@testing-library/react": "^12.1.5",
         "@types/enzyme": "^3.10.12",
         "@types/intl": "^1.2.0",
-        "@types/jest": "^28.1.7",
         "@types/lodash": "^4.14.182",
         "@types/object-hash": "^2.2.1",
         "@types/react": "^17.0.40",
@@ -81,20 +83,23 @@
         "html-webpack-harddisk-plugin": "^2.0.0",
         "html-webpack-plugin": "^5.5.0",
         "intl": "^1.2.5",
-        "jest": "^28.1.3",
-        "jest-css-modules": "^2.1.0",
         "less": "^4.1.3",
         "less-loader": "^11.0.0",
         "mini-css-extract-plugin": "^2.6.1",
         "npm-run-all": "^4.1.5",
         "prettier": "^2.7.1",
+        "react-scripts": "^5.0.1",
         "source-map-loader": "^4.0.0",
         "style-loader": "^3.3.1",
-        "ts-jest": "^28.0.8",
         "ts-loader": "^9.3.1",
         "typescript": "^4.7.4",
         "webpack": "^5.74.0",
         "webpack-dev-server": "^4.10.0"
+    },
+    "jest": {
+        "transformIgnorePatterns": [
+            "node_modules/(?!(@navikt)).*\\.js$"
+        ]
     },
     "resolutions": {
         "babel-core": "7.0.0-bridge.0"
