--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
         "@navikt/sif-common-amplitude": "^2.5.2",
         "@navikt/sif-common-core": "^12.0.6",
         "@navikt/sif-common-formik": "^23.1.1",
-        "@navikt/sif-common-forms": "^17.5.1",
+        "@navikt/sif-common-forms": "17.6.0-beta.1",
         "@navikt/sif-common-sentry": "0.3.2",
         "@navikt/sif-common-soknad": "^5.3.1",
         "@navikt/sif-common-utils": "^3.15.3",
