--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
         "prepare": "npm run snyk-protect"
     },
     "dependencies": {
-        "@navikt/sif-common-amplitude": "^2.5.2",
+        "@navikt/sif-common-amplitude": "^2.6.3",
         "@navikt/sif-common-core": "^12.0.6",
-        "@navikt/sif-common-formik": "^23.1.1",
-        "@navikt/sif-common-forms": "17.6.0-beta.2",
-        "@navikt/sif-common-sentry": "0.3.2",
-        "@navikt/sif-common-soknad": "^5.3.2",
-        "@navikt/sif-common-utils": "^3.15.3",
-        "@snyk/protect": "^1.1042.0",
+        "@navikt/sif-common-formik": "^23.4.0",
+        "@navikt/sif-common-forms": "17.6.3",
+        "@navikt/sif-common-sentry": "0.5.3",
+        "@navikt/sif-common-soknad": "^6.0.1",
+        "@navikt/sif-common-utils": "^3.17.2",
+        "@snyk/protect": "^1.1069.0",
         "axios": "^0.27.2",
         "busboy": "^1.6.0",
         "compression": "^1.7.4",
