--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
         "react-dom": "^17.0.2",
         "react-intl": "^5.24.7",
         "react-router-dom": "^5.3.0",
-        "ulid": "^2.3.0"
+        "ulid": "^2.3.0",
+        "uuid": "^9.0.0"
     },
     "devDependencies": {
         "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
