--- a/package.json
+++ b/package.json
@@ -58,8 +58,9 @@
         "@babel/preset-react": "^7.18.6",
         "@testing-library/react": "^12.1.5",
         "@types/intl": "^1.2.0",
+        "@types/jest": "^29.5.0",
         "@types/lodash": "^4.14.191",
-        "@types/object-hash": "^2.2.1",
+        "@types/object-hash": "^3.0.2",
         "@types/react": "^17.0.40",
         "@types/react-dom": "^17.0.13",
         "@types/react-router-dom": "^5.3.3",
